# project-phoenix-v2

./: .gitignore  Cargo.toml  README.md  Trunk.toml  client-trunk.toml  client.html  index.html  package-lock.json  package.json  project-phoenix-addb46a5ebb1ab36.js  project-phoenix-bef4c47d939f3e8c.js  project-phoenix-c4f299fed8a79deb.js  project-phoenix-cb234a36c08f205d.js  project-phoenix-formal-prd.md  server.html
.github/workflows/: deploy.yml
issues/: 002-message-types.md  003-serialization-layer.md  005-lobby-system.md  007-view-screen-renderer.md  010-client-page.md
issues/done/: 001-cargo-project-setup.md  004-session-manager.md  006-game-simulation.md  008-wasm-js-bridge.md  009-server-page-js.md  011-build-config.md
src/: bridge.rs  codec.rs  lib.rs  lobby.rs  messages.rs  renderer.rs  session.rs  ship_state.rs  simulation.rs
